# magicnet

./: .gitignore  install_uv.sh  pyproject.toml
cfgs/: default.yaml
cfgs/k3d_xyz/: default.yaml  readme.md
cfgs/k3d_xyzrgb/: default.yaml  readme.md
examples/classification/: main.py
examples/segmentation/: main.py  main_debug.py  test_s3dis_6fold.py
examples/shapenetpart/: main.py
openpoints/dataset/: __init__.py
openpoints/dataset/s3dis/: s3dis.py
openpoints/dataset/scanobjectnn/: scanobjectnn.py
openpoints/models/backbone/: __init__.py
openpoints/utils/: __init__.py  config.py
script/: download_s3dis.sh  main_classification.sh  main_partseg.sh  main_segmentation.sh
